--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@angular/router": "^12.2.5",
     "rxjs": "^7.3.0",
     "tslib": "^2.3.1",
-    "zone.js": "^0.11.4"
+    "zone.js": "^0.11.4",
+    "uuid": "3.1.0"
   },
   "scripts": {
     "ng": "ng",
